--- a/Proyecto/WebApplication1/WebApplication1.csproj
+++ b/Proyecto/WebApplication1/WebApplication1.csproj
@@ -388,6 +388,7 @@
     <Compile Include="Contact.aspx.designer.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Cursos\Entidad_Curso.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
