--- a/Proyecto/WebApplication1/WebApplication1.csproj
+++ b/Proyecto/WebApplication1/WebApplication1.csproj
@@ -203,6 +203,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Cursos\Cursos.aspx" />
     <Content Include="Cursos\Expediente.aspx" />
     <Content Include="Cursos\verCursos.aspx" />
     <Content Include="Estudiante\Estudiante.aspx" />
@@ -392,6 +393,13 @@
     </Compile>
     <Compile Include="Cursos\ControladoraBD_curso.cs" />
     <Compile Include="Cursos\Controladora_cursos.cs" />
+    <Compile Include="Cursos\Cursos.aspx.cs">
+      <DependentUpon>Cursos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Cursos\Cursos.aspx.designer.cs">
+      <DependentUpon>Cursos.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Cursos\Entidad_Curso.cs" />
     <Compile Include="Cursos\Expediente.aspx.cs">
       <DependentUpon>Expediente.aspx</DependentUpon>
