--- a/Proyecto/WebApplication1/WebApplication1.csproj
+++ b/Proyecto/WebApplication1/WebApplication1.csproj
@@ -216,6 +216,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="images\Adm Emp.JPG" />
+    <Content Include="images\Electro.JPG" />
+    <Content Include="images\Ing Indu.JPG" />
+    <Content Include="images\Ing Inf.JPG" />
+    <Content Include="images\Ing Sis.JPG" />
+    <Content Include="images\Ing Sof.JPG" />
     <Content Include="Index.aspx" />
     <Content Include="login\login.aspx" />
     <Content Include="Plan_estudio\plan_estudio.aspx" />
