--- a/Proyecto/WebApplication1/WebApplication1.csproj
+++ b/Proyecto/WebApplication1/WebApplication1.csproj
@@ -454,9 +454,8 @@
     <Compile Include="Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
     </Compile>
-    <Compile Include="login\ControladoraBD_login.cs" />
-    <Compile Include="login\Controladora_login.cs" />
-    <Compile Include="login\Entidad_login.cs" />
+    <Compile Include="login\controladora login.cs" />
+    <Compile Include="login\ControladoraBD login.cs" />
     <Compile Include="login\login.aspx.cs">
       <DependentUpon>login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
