--- a/Proyecto/WebApplication1/WebApplication1.csproj
+++ b/Proyecto/WebApplication1/WebApplication1.csproj
@@ -225,6 +225,7 @@
     <Content Include="Index.aspx" />
     <Content Include="login\login.aspx" />
     <Content Include="Matricula\matricula.aspx" />
+    <Content Include="Perfil\Perfil.aspx" />
     <Content Include="Plan_estudio\Plan_estudio.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -475,6 +476,13 @@
       <DependentUpon>matricula.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Perfil\Perfil.aspx.cs">
+      <DependentUpon>Perfil.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Perfil\Perfil.aspx.designer.cs">
+      <DependentUpon>Perfil.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Plan_estudio\Controladora_Plan.cs" />
     <Compile Include="Plan_estudio\Plan_estudio.aspx.cs">
       <DependentUpon>Plan_estudio.aspx</DependentUpon>
