--- a/Proyecto/WebApplication1/WebApplication1.csproj
+++ b/Proyecto/WebApplication1/WebApplication1.csproj
@@ -227,7 +227,7 @@
     <Content Include="Index.aspx" />
     <Content Include="login\login.aspx" />
     <Content Include="Cursos\matricula.aspx" />
-    <Content Include="Perfil\Horarios.aspx" />
+    <Content Include="Perfil\horario.aspx" />
     <Content Include="Perfil\Perfil.aspx" />
     <Content Include="Plan_estudio\Plan_estudio.aspx" />
     <Content Include="Scripts\bootstrap.js" />
@@ -478,12 +478,12 @@
       <DependentUpon>matricula.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
-    <Compile Include="Perfil\Horarios.aspx.cs">
-      <DependentUpon>Horarios.aspx</DependentUpon>
+    <Compile Include="Perfil\horario.aspx.cs">
+      <DependentUpon>horario.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Perfil\Horarios.aspx.designer.cs">
-      <DependentUpon>Horarios.aspx</DependentUpon>
+    <Compile Include="Perfil\horario.aspx.designer.cs">
+      <DependentUpon>horario.aspx</DependentUpon>
     </Compile>
     <Compile Include="Perfil\Perfil.aspx.cs">
       <DependentUpon>Perfil.aspx</DependentUpon>
